--- a/exampleSite/config/_default/config.toml
+++ b/exampleSite/config/_default/config.toml
@@ -5,11 +5,11 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Academia"
+title = "KUMFA"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://kumfa.or.kr/`.
-baseURL = "https://kumfa.or.org/examplesite/"
+baseURL = "https://kumfa.or.org/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
